# notas_fiscais

sistema_notas/: pyproject.toml
sistema_notas/sistema_notas/: main.py
sistema_notas/sistema_notas/DTO/: conexao.py  consultas.py
sistema_notas/sistema_notas/DTO/dados/: compras.py  insert_dados.py  itens_nota.py
sistema_notas/sistema_notas/pages/cadastros/: notas.py
sistema_notas/sistema_notas/pages/indicadores/: dashboards.py
sistema_notas/sistema_notas/utils/: util.py
